--- a/source/sass/global/fonts.scss
+++ b/source/sass/global/fonts.scss
@@ -1,8 +1,40 @@
+/* alumni-sans-regular - cyrillic_latin */
 @font-face {
+  font-display: swap; 
+  font-family: 'Alumni Sans';
   font-style: normal;
   font-weight: 400;
-  font-family: "";
-
-  font-display: swap;
-  src: url("../fonts/.woff2") format("woff2");
+  src: url('../../fonts/alumni-sans-v18-cyrillic_latin-regular.woff2') format('woff2');
+}
+/* alumni-sans-500 - cyrillic_latin */
+@font-face {
+  font-display: swap; 
+  font-family: 'Alumni Sans';
+  font-style: normal;
+  font-weight: 500;
+  src: url('../../fonts/alumni-sans-v18-cyrillic_latin-500.woff2') format('woff2'); 
+}
+/* alumni-sans-600 - cyrillic_latin */
+@font-face {
+  font-display: swap; 
+  font-family: 'Alumni Sans';
+  font-style: normal;
+  font-weight: 600;
+  src: url('../../fonts/alumni-sans-v18-cyrillic_latin-600.woff2') format('woff2');
+}
+/* alumni-sans-700 - cyrillic_latin */
+@font-face {
+  font-display: swap; 
+  font-family: 'Alumni Sans';
+  font-style: normal;
+  font-weight: 700;
+  src: url('../fonts/alumni-sans-v18-cyrillic_latin-700.woff2') format('woff2'); 
+}
+/* alumni-sans-800 - cyrillic_latin */
+@font-face {
+  font-display: swap; 
+  font-family: 'Alumni Sans';
+  font-style: normal;
+  font-weight: 800;
+  src: url('../../fonts/alumni-sans-v18-cyrillic_latin-800.woff2') format('woff2'); 
 }
