--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -27,7 +27,7 @@ $fz-default:                        16px;
 // https://www.artlebedev.ru/kovodstvo/sections/159/#13
 $ff-rouble:                         "Rouble", "Arial", sans-serif;
 
-$ff-placeholder:                    "Alumni Sans", "Arial", sans-serif;
+$ff-placeholder:                    "Roboto Condensed", "Arial", sans-serif;
 
 // Animation
 // ---------------------------------
