--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -18,12 +18,13 @@
 // Blocks
 // ---------------------------------
 
-@import "blocks/btn";
+@import "blocks/button";
 @import "blocks/modal";
 @import "blocks/custom-input";
 @import "blocks/custom-toggle";
 @import "blocks/custom-select";
 @import "blocks/header";
+@import "blocks/intro";
 
 // ---------------------------------
 
