--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -29,6 +29,7 @@ $ff-rouble:                         "Rouble", "Arial", sans-serif;
 
 $ff-placeholder:                    "Roboto Condensed", "Arial", sans-serif;
 
+$ff-alumni:                         "Alumni Sans", "Arial", sans-serif;
 // Animation
 // ---------------------------------
 
