завершаем верстку секции about

--- a/source/sass/blocks/intro.scss
+++ b/source/sass/blocks/intro.scss
@@ -88,9 +88,10 @@
   margin: 0 0 0 42px;
   grid-column: 2 / 3;
   background-color: transparent;
-  border: 2px solid #FFF;
+  border: 2px solid #fff;
   color: #fff;
 }
 
 .intro__image {
+  background: rgba(20, 54, 122, 0.5);
 }
