--- a/source/sass/global/fonts.scss
+++ b/source/sass/global/fonts.scss
@@ -73,7 +73,7 @@
 }
 /* roboto-condensed-800 - cyrillic_latin */
 @font-face {
-  font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
+  font-display: swap; 
   font-family: 'Roboto Condensed';
   font-style: normal;
   font-weight: 800;
