--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -25,6 +25,7 @@
 @import "blocks/custom-select";
 @import "blocks/header";
 @import "blocks/intro";
+@import "blocks/about";
 
 // ---------------------------------
 
