начало блока с абонементами

--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -26,6 +26,8 @@
 @import "blocks/header";
 @import "blocks/intro";
 @import "blocks/about";
+@import "blocks/subscription";
+@import "blocks/tabs";
 
 // ---------------------------------
 
