--- a/source/sass/blocks/header.scss
+++ b/source/sass/blocks/header.scss
@@ -21,7 +21,7 @@
   line-height: 26px;
   text-transform: uppercase;
 }
-.header_telephone {
+.header__telephone {
   color: #fff;
   text-align: right;
   font-size: 26px;
