--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -28,6 +28,7 @@
 @import "blocks/about";
 @import "blocks/subscription";
 @import "blocks/tabs";
+@import "blocks/data-tabs";
 
 // ---------------------------------
 
