--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -29,6 +29,7 @@
 @import "blocks/subscription";
 @import "blocks/tabs";
 @import "blocks/data-tabs";
+@import "blocks/games";
 
 // ---------------------------------
 
