--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -13,7 +13,7 @@
 
 @import "vendor/normalize";
 @import "vendor/swiper";
-
+@import "vendor/data-tabs";
 // Blocks
 // ---------------------------------
 
@@ -27,7 +27,6 @@
 @import "blocks/about";
 @import "blocks/subscription";
 @import "blocks/tabs";
-@import "blocks/data-tabs";
 @import "blocks/games";
 
 // ---------------------------------
