--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -13,7 +13,6 @@
 
 @import "vendor/normalize";
 @import "vendor/swiper";
-@import "vendor/data-tabs";
 // Blocks
 // ---------------------------------
 
@@ -28,6 +27,7 @@
 @import "blocks/subscription";
 @import "blocks/tabs";
 @import "blocks/games";
+@import "blocks/advantages";
 
 // ---------------------------------
 
