--- a/source/sass/blocks/advantages.scss
+++ b/source/sass/blocks/advantages.scss
@@ -10,19 +10,34 @@
   line-height: 54px;
   letter-spacing: 1.62px;
   text-align: center;
-  margin: 0;
+  margin: 0 0 50px 0;
 }
 .advantages__list {
   list-style-type: none;
-  margin: 0;
+  margin: 0 auto;
   padding: 0;
+  width: 1050px;
+  height: 344px;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  gap: 58px;
 }
+
 .advantages__item {
   display: flex;
   align-items: center;
+  width: 350px;
+  height: 92px;
 
   &--element {
     background-color: #1c3374;
+    width: 240px;
+    min-height: 340px;
+    flex-direction: column;
+    align-items: center;
+    padding: 70px 34px 0 34px;
   }
 }
 .advantages__count-wrapper {
@@ -47,10 +62,7 @@
   font-size: 14px;
   font-style: normal;
   font-weight: 400;
-  line-height: 22px; /* 157.143% */
-}
-
-.advantages__text-wrapper {
+  line-height: 22px;
 }
 
 .advantages__item-title {
@@ -76,17 +88,25 @@
   font-style: normal;
   font-weight: 700;
   line-height: 70px;
-  margin: 0 30px 0 0;
+  margin: 0 0 12px 0;
 }
+
 .advantages__element-wrapper {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 42px;
 }
+
 .advantages__element-text {
   color: #fff;
   font-size: 26px;
   font-style: normal;
   font-weight: 700;
   line-height: 26px;
+  text-align: center;
 }
+
 .advantages__element-description {
   color: #fff;
   text-align: center;
@@ -94,4 +114,5 @@
   font-style: normal;
   font-weight: 400;
   line-height: 150%;
+  margin: 0;
 }
