--- a/source/sass/blocks/subscription.scss
+++ b/source/sass/blocks/subscription.scss
@@ -1,12 +1,11 @@
 .subscription {
-    background: #F8F9FC;
+  background: #f8f9fc;
 }
 
 .subscription__container {
-    padding: 120px 103px;
-}
+  padding: 120px 103px;
 
-.subscription__title {
+  h2 {
     font-family: $ff-alumni;
     font-size: 54px;
     font-style: normal;
@@ -15,4 +14,5 @@
     letter-spacing: 1.62px;
     text-align: center;
     margin: 0 0 38px 0;
+  }
 }
