--- a/source/sass/blocks/advantages.scss
+++ b/source/sass/blocks/advantages.scss
@@ -1,118 +1,113 @@
 .advantages__container {
   padding: 120px 103px;
-}
 
-.advantages__title {
-  font-family: $ff-alumni;
-  font-size: 54px;
-  font-style: normal;
-  font-weight: 600;
-  line-height: 54px;
-  letter-spacing: 1.62px;
-  text-align: center;
-  margin: 0 0 50px 0;
-}
-.advantages__list {
-  list-style-type: none;
-  margin: 0 auto;
-  padding: 0;
-  width: 1050px;
-  height: 344px;
-  display: flex;
-  flex-direction: column;
-  flex-wrap: wrap;
-  justify-content: space-between;
-  gap: 58px;
-}
+  h2 {
+    font-family: $ff-alumni;
+    font-size: 54px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: 54px;
+    letter-spacing: 1.62px;
+    text-align: center;
+    margin: 0 0 50px 0;
+  }
 
-.advantages__item {
-  display: flex;
-  align-items: center;
-  width: 350px;
-  height: 92px;
+  ul {
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+  }
 
-  &--element {
-    background-color: #1c3374;
-    width: 240px;
-    min-height: 340px;
-    flex-direction: column;
+  li {
+    display: flex;
     align-items: center;
-    padding: 70px 34px 0 34px;
+
   }
 }
+
 .advantages__count-wrapper {
   display: flex;
   flex-direction: column;
+
+  span {
+    font-size: 70px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 70px;
+    background: linear-gradient(128deg, #d10a42 0%, #0041ca 45.58%);
+    background-clip: text;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    margin: 0 30px 0 0;
+  }
+
+  span + span {
+    color: #2e35ac;
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 22px;
+  }
 }
 
-.advantages__count {
-  font-size: 70px;
-  font-style: normal;
-  font-weight: 700;
-  line-height: 70px;
-  background: linear-gradient(128deg, #d10a42 0%, #0041ca 45.58%);
-  background-clip: text;
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
-  margin: 0 30px 0 0;
+.advantages__text-wrapper {
+  h4 {
+    font-size: 22px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 22px;
+    margin: 0 0 8px 0;
+  }
+
+  p {
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 300;
+    line-height: 24px;
+    margin: 0;
+  }
 }
 
-.advantages__sub-count {
-  color: #2e35ac;
-  font-size: 14px;
-  font-style: normal;
-  font-weight: 400;
-  line-height: 22px;
-}
-
-.advantages__item-title {
-  font-size: 22px;
-  font-style: normal;
-  font-weight: 400;
-  line-height: 22px;
-  margin: 0 0 8px 0;
-}
-
-.advantages__description {
-  font-size: 16px;
-  font-style: normal;
-  font-weight: 300;
-  line-height: 24px;
-  margin: 0;
-}
-
-.advantages__element-count {
-  color: #fff;
-  text-align: center;
-  font-size: 70px;
-  font-style: normal;
-  font-weight: 700;
-  line-height: 70px;
-  margin: 0 0 12px 0;
-}
-
-.advantages__element-wrapper {
+.advantages__sub-container {
   display: flex;
   flex-direction: column;
-  align-items: center;
-  gap: 42px;
-}
 
-.advantages__element-text {
-  color: #fff;
-  font-size: 26px;
-  font-style: normal;
-  font-weight: 700;
-  line-height: 26px;
-  text-align: center;
-}
+  li {
+    background-color: #1c3374;
+      width: 240px;
+      min-height: 340px;
+      flex-direction: column;
+      padding: 70px 34px 0 34px;
+  }
+  span {
+    color: #fff;
+    text-align: center;
+    font-size: 70px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 70px;
+    margin: 0 0 12px 0;
+  }
 
-.advantages__element-description {
-  color: #fff;
-  text-align: center;
-  font-size: 16px;
-  font-style: normal;
-  font-weight: 400;
-  line-height: 150%;
-  margin: 0;
+  span + span {
+    color: #fff;
+    font-size: 26px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 26px;
+    text-align: center;
+  }
+
+  p {
+    color: #fff;
+    text-align: center;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 150%;
+    margin: 0;
+  }
 }
