закончена верстка блока акции без перехода

--- a/source/sass/blocks/custom-select.scss
+++ b/source/sass/blocks/custom-select.scss
@@ -17,7 +17,7 @@
 
     transform: translateY(-50%);
 
-    transition: transform 0.3s ease, opacity  0.3s ease;
+    transition: transform 0.3s ease, opacity 0.3s ease;
 
     pointer-events: none;
 
@@ -101,7 +101,7 @@
 
     list-style: none;
 
-    background-color: #ffffff;
+    background-color: $color-default-white;
     border: 2px solid #000000;
     transform: translateY(100%);
     visibility: hidden;
