--- a/source/sass/blocks/advantages.scss
+++ b/source/sass/blocks/advantages.scss
@@ -17,14 +17,13 @@
     padding: 0;
     margin: 0;
     display: flex;
-    flex-wrap: wrap;
     justify-content: space-between;
+    flex-wrap: wrap;
   }
 
   li {
     display: flex;
     align-items: center;
-
   }
 }
 
@@ -72,18 +71,15 @@
 }
 
 .advantages__sub-container {
+  background-color: #1c3374;
   display: flex;
   flex-direction: column;
+  padding: 70px 34px 86px 34px;
+  width: 240px;
+  height: 340px;
 
-  li {
-    background-color: #1c3374;
-      width: 240px;
-      min-height: 340px;
-      flex-direction: column;
-      padding: 70px 34px 0 34px;
-  }
   span {
-    color: #fff;
+    color: $color-default-white;
     text-align: center;
     font-size: 70px;
     font-style: normal;
@@ -93,21 +89,26 @@
   }
 
   span + span {
-    color: #fff;
+    color: $color-default-white;
     font-size: 26px;
     font-style: normal;
     font-weight: 700;
     line-height: 26px;
     text-align: center;
+    margin: 0 0 42px 0;
   }
 
   p {
-    color: #fff;
+    color: $color-default-white;
     text-align: center;
     font-size: 16px;
     font-style: normal;
     font-weight: 400;
     line-height: 150%;
     margin: 0;
+    text-align: center;
   }
+}
+
+.advantages__centered-element {
 }
