--- a/source/sass/blocks/header.scss
+++ b/source/sass/blocks/header.scss
@@ -17,7 +17,7 @@
   }
 
   a + a {
-    color: #fff;
+    color: $color-default-white;
     text-align: right;
     font-size: 26px;
     font-style: normal;
