--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -28,6 +28,7 @@
 @import "blocks/tabs";
 @import "blocks/games";
 @import "blocks/advantages";
+@import "blocks/promo";
 
 // ---------------------------------
 
