--- a/source/sass/blocks/games.scss
+++ b/source/sass/blocks/games.scss
@@ -1,6 +1,9 @@
+.games__container {
+  padding: 120px 130px;
+}
+
 .games__wrapper {
   display: flex;
-  padding: 120px 103px;
 }
 
 .games__text-wrapper {
