--- a/source/sass/blocks/header.scss
+++ b/source/sass/blocks/header.scss
@@ -11,13 +11,13 @@
     #73184b 75.5%,
     #b4022a 100%
   );
-
+  
   img {
     display: block;
   }
 
   a + a {
-    color: $color-default-white;
+    color: #fff;
     text-align: right;
     font-size: 26px;
     font-style: normal;
