--- a/source/sass/blocks/promo.scss
+++ b/source/sass/blocks/promo.scss
@@ -7,12 +7,14 @@
     line-height: 54px;
     letter-spacing: 1.62px;
     text-align: center;
+    margin: 0 0 70px 0;
+    padding: 120px 0 0 0;
   }
 }
 .promo__container {
   display: flex;
-  padding: 120px 103px;
   gap: 40px;
+  padding: 0px 130px 120px 130px;
 }
 
 .promo__wrapper {
