--- a/source/sass/blocks/subscription.scss
+++ b/source/sass/blocks/subscription.scss
@@ -16,3 +16,121 @@
     margin: 0 0 38px 0;
   }
 }
+
+.subscription__tabs-controls {
+  display: flex;
+  justify-content: center;
+  gap: 50px;
+  margin: 0 0 51px 0;
+}
+
+.subscription__tabs-control {
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 20px;
+  border: none;
+  background-color: transparent;
+  cursor: pointer;
+}
+
+.subscription__tabs {
+  ul {
+    display: flex;
+    gap: 40px;
+    flex-wrap: wrap;
+    padding: 0;
+    margin: 0;
+  }
+
+  li {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 360px;
+    height: 448px;
+    flex-shrink: 0;
+    background: $color-default-white;
+
+    .is-selected {
+      border: 7px solid;
+      border-image: linear-gradient(
+          to right,
+          rgba(209, 10, 66, 1),
+          rgba(0, 53, 159, 1)
+        )
+        1;
+    }
+  }
+
+  h4 {
+    color: #102654;
+    text-align: center;
+    font-size: 26px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 26px;
+    margin: 0 0 11px 0;
+  }
+
+  p {
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 300;
+    line-height: 24px;
+    margin: 0 0 12px 0;
+  }
+}
+
+.subscription__price-wrapper {
+  position: relative;
+  flex-shrink: 0;
+  text-align: center;
+  padding: 54px 62px 6px 19px;
+  margin: 0 0 29px 0;
+
+  span {
+    color: #103aae;
+    font-size: 60px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 150%;
+    position: relative;
+    z-index: 2;
+  }
+
+  span + span {
+    color: #e8e8e8;
+    font-size: 100px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 150%;
+    opacity: 0.48;
+    width: 203px;
+    height: 150px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 1;
+  }
+}
+
+.subscription__button {
+  background-color: $color-default-white;
+  font-size: 12px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 12px;
+  letter-spacing: 0.6px;
+  text-transform: uppercase;
+  padding: 27px 44px;
+  border: 2px solid #102654;
+
+  &--is-selected {
+    color: $color-default-white;
+    border: none;
+    background: var(--1, linear-gradient(97deg, #ed0233 17.6%, #003eb7 95.31%));
+  }
+}
