--- a/source/sass/blocks/swiper.scss
+++ b/source/sass/blocks/swiper.scss
@@ -19,24 +19,23 @@
 :root {
   --swiper-theme-color: #007aff;
 }
+
 .swiper {
-  margin-left: auto;
-  margin-right: auto;
   position: relative;
   overflow: hidden;
   list-style: none;
   /* Fix of Webkit flickering */
   z-index: 1;
-  padding: 0 103px;
-}
-
-.swiper-container {
-  padding: 0 0 120px 0;
 }
 
 .swiper-vertical > .swiper-wrapper {
   flex-direction: column;
 }
+
+.swiper-container {
+  padding: 120px 130px;
+}
+
 .swiper-wrapper {
   position: relative;
   width: 100%;
@@ -54,7 +53,6 @@
   font-weight: 600;
   line-height: 54px;
   letter-spacing: 1.62px;
-  padding: 0 0 0 103px;
   margin: 0 0 54px 0;
 }
 .swiper-android .swiper-slide,
