--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -27,7 +27,7 @@
 @import "blocks/advantages";
 @import "blocks/promo";
 @import "blocks/faq";
-@import "blocks/swiper";
+@import "blocks/swiper-jouri";
 
 // ---------------------------------
 
