--- a/source/sass/global/fonts.scss
+++ b/source/sass/global/fonts.scss
@@ -1,5 +1,17 @@
-/* alumni-sans-regular - cyrillic_latin */
 @font-face {
+  font-display: swap; 
+  font-family: 'Roboto Condensed';
+  font-style: normal;
+  font-weight: 300;
+  src: url('../fonts/roboto-condensed-v27-cyrillic_latin-300.woff2') format('woff2');
+}
+/* roboto-condensed-regular - cyrillic_latin */
+@font-face {
+  font-family: 'Roboto Condensed';
+  font-style: normal;
+  font-weight: 400;
+  src: url('../fonts/roboto-condensed-v27-cyrillic_latin-regular.woff2') format('woff2'); 
+}@font-face {
   font-display: swap; 
   font-family: 'Alumni Sans';
   font-style: normal;
