--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -28,6 +28,7 @@
 @import "blocks/promo";
 @import "blocks/faq";
 @import "blocks/swiper-jouri";
+@import "blocks/reviews";
 
 // ---------------------------------
 
