--- a/source/sass/blocks/promo.scss
+++ b/source/sass/blocks/promo.scss
@@ -22,7 +22,7 @@
   flex-shrink: 0;
 }
 
-.text__wrapper {
+.promo__text-wrapper {
   color: $color-default-white;
   background-color: #ed0233;
   padding: 40px 45px;
