--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -12,6 +12,7 @@
 // ---------------------------------
 
 @import "vendor/normalize";
+@import "vendor/swiper";
 // Blocks
 // ---------------------------------
 
@@ -27,8 +28,8 @@
 @import "blocks/advantages";
 @import "blocks/promo";
 @import "blocks/faq";
-@import "blocks/swiper-jouri";
-@import "blocks/reviews";
+@import "blocks/juri-swiper";
+@import "blocks/reviews-swiper";
 
 // ---------------------------------
 
