--- a/source/sass/blocks/reviews-swiper.scss
+++ b/source/sass/blocks/reviews-swiper.scss
@@ -1,4 +1,4 @@
-.reviews__container {
+.reviews-container {
   padding: 120px 403px;
 
   h2 {
@@ -11,24 +11,21 @@
     margin: 0 0 46px 0;
     text-align: center;
   }
-
-  ul {
-    list-style-type: none;
-  }
-  
-  li {
-    display: flex;
-    width: 560px;
-    padding: 60px;
-    color: $color-default-white;
-    background: #1c3374;
-    box-shadow: 0px 0px 40px 0px rgba(28, 51, 116, 0.2);
-    gap: 30px;
-    margin: 0;
-  }
 }
 
-.reviews__text-wrapper {
+.reviews-slide {
+  display: flex;
+  max-width: 560px;
+  padding: 60px;
+  color: $color-default-white;
+  background: #1c3374;
+  box-shadow: 0px 0px 40px 0px rgba(28, 51, 116, 0.2);
+  gap: 30px;
+  margin: 0;
+  position: relative;
+}
+
+.reviews-text-wrapper {
   width: 330px;
   h6 {
     font-size: 22px;
