начинаем делать футер

--- a/source/sass/blocks/reviews-swiper.scss
+++ b/source/sass/blocks/reviews-swiper.scss
@@ -1,5 +1,5 @@
 .reviews-container {
-  padding: 120px 403px;
+  padding: 120px 347px;
 
   h2 {
     font-family: $ff-alumni;
@@ -16,6 +16,7 @@
 .reviews-slide {
   display: flex;
   max-width: 560px;
+  height: 279px;
   padding: 60px;
   color: $color-default-white;
   background: #1c3374;
