--- a/source/sass/blocks/juri-swiper.scss
+++ b/source/sass/blocks/juri-swiper.scss
@@ -1,24 +1,29 @@
-.juri-swiper {
-    padding: 120px 130px;
-  }
-  
+.juri-container {
+  padding: 0 40px;
 
-.juri-slide {
-    flex-shrink: 0;
-    max-width: 260px;
-    height: 294px;
-    position: relative;
-    transition-property: transform;
-  }
-
-  .swiper-name {
-    position: absolute;
-    color: #fff;
-    font-size: 22px;
+  h2 {
+    font-family: $ff-alumni;
+    font-size: 54px;
     font-style: normal;
-    font-weight: 400;
-    line-height: 22px;
-    bottom: 26px;
-    left: 55px;
+    font-weight: 600;
+    line-height: 54px;
+    letter-spacing: 1.62px;
+    margin: 0 0 46px 0;
+    padding: 0 56px 0 56px;
   }
-  
+}
+
+.swiper-name {
+  position: absolute;
+  color: #fff;
+  font-size: 22px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 22px;
+  bottom: 26px;
+  left: 55px;
+}
+
+.juri-image-wrapper {
+  width: 260px;
+}
