--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -30,6 +30,7 @@
 @import "blocks/faq";
 @import "blocks/juri-swiper";
 @import "blocks/reviews-swiper";
+@import "blocks/footer";
 
 // ---------------------------------
 
