футер. секция с контактами

--- a/source/sass/blocks/footer.scss
+++ b/source/sass/blocks/footer.scss
@@ -60,18 +60,9 @@
   text-transform: uppercase;
 }
 .footer__contacts {
+  padding: 60px 163px 60px 120px;
 }
 
-.footer__contacts-title {
-    font-family: $ff-alumni;
-    font-size: 54px;
-    font-style: normal;
-    font-weight: 600;
-    line-height: 54px;
-    letter-spacing: 1.62px;
-}
-.footer__text-wrapper {
-}
 .footer__nav {
 }
 .nav {
