--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -31,6 +31,8 @@
 @import "blocks/juri-swiper";
 @import "blocks/reviews-swiper";
 @import "blocks/footer";
+@import "blocks/contacts";
+
 
 // ---------------------------------
 
