--- a/source/sass/blocks/contacts.scss
+++ b/source/sass/blocks/contacts.scss
@@ -13,19 +13,23 @@
   list-style-type: none;
   display: flex;
   flex-wrap: wrap;
-  gap: 120px;
+  margin: 0;
+  padding: 0;
+  justify-content: space-between;
 }
 .contacts__item {
+  width: 50%;
 }
 .contacts__title {
   font-size: 24px;
   font-style: normal;
   font-weight: 400;
   line-height: 24px;
+  margin: 0 0 5px 0;
 }
 .contacts__description {
   font-size: 14px;
   font-style: normal;
   font-weight: 400;
-  line-height: 22px; 
+  line-height: 22px;
 }
