--- a/source/sass/blocks/footer.scss
+++ b/source/sass/blocks/footer.scss
@@ -9,7 +9,7 @@
   background-color: #102654;
   display: flex;
   flex-direction: column;
-  width: 683px;
+  width: 50%;
 
   h3 {
     color: $color-default-white;
@@ -61,15 +61,15 @@
 }
 .footer__contacts {
   padding: 60px 163px 60px 120px;
+  width: 50%;
 }
 
 .footer__nav {
-}
-.nav {
-}
-.nav__title {
-}
-.nav__user-list {
-}
-.nav__socials-list {
+  background-color: #030a1a;
+  color: $color-default-white;
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0 103px;
 }
