--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -32,6 +32,7 @@
 @import "blocks/reviews-swiper";
 @import "blocks/footer";
 @import "blocks/contacts";
+@import "blocks/nav";
 
 
 // ---------------------------------
