приступаем к состояниям кнопок

--- a/source/sass/blocks/about.scss
+++ b/source/sass/blocks/about.scss
@@ -48,3 +48,12 @@
   top: 70%;
   right: 54%;
 }
+
+.about__iframe-button {
+  width: 100px;
+  height: 100px;
+  border-radius: 50px;
+  background-color:$color-default-white;
+  border: 2px solid #ED0233;
+
+}
