--- a/source/sass/blocks/footer.scss
+++ b/source/sass/blocks/footer.scss
@@ -68,6 +68,7 @@
   background-color: #030a1a;
   color: $color-default-white;
   width: 100%;
+  min-height: 105px;
   display: flex;
   justify-content: space-between;
   align-items: center;
