--- a/source/sass/blocks/header.scss
+++ b/source/sass/blocks/header.scss
@@ -11,17 +11,34 @@
     #73184b 75.5%,
     #b4022a 100%
   );
-  
-  img {
-    display: block;
+}
+.header__image {
+  display: block;
+}
+
+.header__telephone {
+  color: #fff;
+  text-align: right;
+  font-size: 26px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 26px;
+  text-decoration: none;
+
+  @include hover-focus {
+    color: #1c3374;
   }
 
-  a + a {
-    color: #fff;
-    text-align: right;
-    font-size: 26px;
-    font-style: normal;
-    font-weight: 700;
-    line-height: 26px;
+  @include active {
+    color: #102654;
+    border-bottom: 1px solid #102654;
+  }
+
+  @include disabled {
+    color: #f8f9fc;
+    opacity: 0.5;
+    cursor: not-allowed;
+    pointer-events: none;
+    outline: none;
   }
 }
