--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -33,6 +33,7 @@
 @import "blocks/footer";
 @import "blocks/contacts";
 @import "blocks/nav";
+@import "blocks/socials";
 
 
 // ---------------------------------
