--- a/source/sass/blocks/about.scss
+++ b/source/sass/blocks/about.scss
@@ -56,13 +56,29 @@
   background-color: $color-default-white;
   border: 2px solid #ed0233;
   position: relative;
+  cursor: pointer;
+
+  @include hover-focus {
+    border: 2px solid #102654;
+  }
+
+  @include active {
+    border: 2px solid #102654;
+  }
+
+  @include disabled {
+    opacity: 0.4;
+    cursor: not-allowed;
+    pointer-events: none;
+    outline: none;
+  }
 
   &::before {
     position: absolute;
     content: "";
     width: 75px;
     height: 75px;
-    border-radius: 50px;
+    border-radius: 36px;
     background: linear-gradient(
       90deg,
       #1c3477 0%,
@@ -75,7 +91,6 @@
     left: 50%;
     transform: translate(-50%, -50%);
   }
-
   &::after {
     content: "";
     position: absolute;
