--- a/source/sass/blocks/juri-swiper.scss
+++ b/source/sass/blocks/juri-swiper.scss
@@ -1,16 +1,17 @@
 .juri-container {
-  padding: 0 40px;
+  max-width: 1160px;
+  position: relative;
+}
 
-  h2 {
-    font-family: $ff-alumni;
-    font-size: 54px;
-    font-style: normal;
-    font-weight: 600;
-    line-height: 54px;
-    letter-spacing: 1.62px;
-    margin: 0 0 46px 0;
-    padding: 0 56px 0 56px;
-  }
+.juri-title {
+  font-family: $ff-alumni;
+  font-size: 54px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 54px;
+  letter-spacing: 1.62px;
+  margin: 0 0 46px 0;
+  padding: 0;
 }
 
 .swiper-name {
