состояния иконок жури + центрирование

--- a/source/sass/blocks/about.scss
+++ b/source/sass/blocks/about.scss
@@ -1,7 +1,9 @@
+
 .about__container {
   display: flex;
   gap: 145px;
-  padding: 120px 103px 235px 103px;
+  padding: 120px 0 235px 0;
+  width: 1160px;
 }
 
 .about__text-wrapper {
