--- a/source/sass/blocks/juri-swiper.scss
+++ b/source/sass/blocks/juri-swiper.scss
@@ -1,6 +1,13 @@
+.juri-swiper {
+  padding: 0 103px;
+}
+
+
 .juri-container {
   max-width: 1160px;
   position: relative;
+  padding: 0;
+  margin: 0;
 }
 
 .juri-title {
@@ -11,7 +18,7 @@
   line-height: 54px;
   letter-spacing: 1.62px;
   margin: 0 0 46px 0;
-  padding: 0;
+  padding: 0 0 0 103px;
 }
 
 .swiper-name {
