оверлей слайдера + состояния кнопок

--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -28,7 +28,7 @@
 @import "blocks/advantages";
 @import "blocks/promo";
 @import "blocks/faq";
-@import "blocks/juri-swiper";
+@import "blocks/jury-swiper";
 @import "blocks/reviews-swiper";
 @import "blocks/footer";
 @import "blocks/contacts";
