--- a/source/sass/blocks/games.scss
+++ b/source/sass/blocks/games.scss
@@ -114,4 +114,22 @@
   background-color: transparent;
   color: $color-default-white;
   border: 2px solid $color-default-white;
+
+  @include hover-focus {
+    background-color: $color-default-white;
+    color: #103aae;
+  }
+
+  @include active {
+    background-color: $color-default-white;
+    color: #102654;
+  }
+
+  @include disabled {
+    opacity: 0.5;
+    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+    cursor: not-allowed;
+    pointer-events: none;
+    outline: none;
+  }
 }
